Fix deprecated stuff from JDK 16